--- a/css/zh_CN/style.css
+++ b/css/zh_CN/style.css
@@ -181,9 +181,9 @@ a:hover {
 #container {
     margin:0 auto;
     /*
-    width:100%;
+    width:98%;
     */
-    width:1003px;
+    width:1024px;
 }
 
 #container_small {
@@ -638,7 +638,6 @@ padding-left:100px;
 
 .gridview .datalist {
     border-collapse:collapse;
-    table-layout:fixed;
     border:1px #08427c solid;width:100%;padding:3px 2px 2px 3px;margin:0px auto
 }
 
@@ -653,9 +652,10 @@ padding-left:100px;
 	padding:3px 10px 0px;
 	height:25px;
 	background:#eef2f6;
-	 url(../../imagess/tt_bj.gif);
+	 url(../../images/tt_bj.gif);
 	font-size: 12px;
 	font-weight: normal;
+	white-space: nowrap;
 }
 .gridview .datalist td {
     text-align:left;
@@ -663,6 +663,7 @@ padding-left:100px;
     vertical-align:bottom;
     padding: 0px 10px 2px;
     height:22px;
+    white-space: nowrap;
 }
 
 .gridview .datalist td label{
